# flutter-app

./: .gitignore  README.md  pubspec.yaml
android/app/: CMakeLists.txt  build.gradle
android/app/libs/arm64-v8a/: libgo.h
android/app/libs/armeabi-v7a/: libgo.h
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/new_chain/: MainActivity.kt
c_android/: build.sh  hello.c  hello.h  main.c
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Classes/: hello_world.c  native_add.cpp  native_array.cpp  native_pp.cpp
lib/: main.dart
lib/ffi/: ffi.dart  interface.h  libgo.h  libgo.h.dart
lib/third/: native.dart  native_array.dart  native_pp.dart
test/: widget_test.dart
third_cmake/: CrossPlatform.md  README.md
third_cmake/demo1/: CMakeLists.txt  demo1.cpp
third_cmake/demo2/: CMakeLists.txt  demo2.cpp
third_cmake/demo2/math/: mysqrt.cpp
third_go/: build.cmd  go.mod  main.go
